--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,16 @@
         }
     </style>
 {% endblock %}
+{% block content %}
+    <p>
+
+        {#  <a href="{% url 'orderapp:list' 'xa' 1001 %}">订单</a>#}
+        {#  也可以使用关键字传参#}
+        <a href="{% url 'orderapp:list' order_num=1001 city_code='xa' %}">订单</a>
+
+    </p>
+{% endblock %}
+
 
 {% block footer %}
     {{ block.super }}
